# TerraAssistant

./: .replit  README.md  app.py  main.py  models.py  pyproject.toml  terra.db  Маркетинговые команды
instance/: terra.db
static/css/: custom.css
static/js/: commands.js  voice.js
templates/: index.html
utils/: command_processor.py  nlp.py
