[project]
name = "repl-nix-terraassistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask==2.0.1",
    "flask-sqlalchemy==2.5.1",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.0",
    "speechrecognition>=3.11.0",
    "sqlalchemy==1.4.23",
    "werkzeug==2.0.1",
    "jinja2==3.0.1",
    "itsdangerous>=2.2.0",
    "flask-cors==3.0.10",
    "numpy>=2.2.0",
    "nltk>=3.9.1",
    "python-dotenv",
    "click>=8.1.7",
]
